blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Conflict_Check__c/Conflict_Check__c.object-meta.xml
<CustomObject>
    <description>The record of one conflict-of-interest check run before we advised or proposed: who was checked, the result and who cleared it. Kept as an audit trail, separate from the deal.</description>
    <label>Conflict check</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conflict checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>