blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Conflict_Check__c/fields/Check_date__c.field-meta.xml
<CustomField>
    <fullName>Check_date__c</fullName>
    <description>The date the check was run. A check is valid for a stated period only.</description>
    <label>Check date</label>
    <type>Date</type>
</CustomField>