blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Conflict_Check__c/fields/Cleared_by__c.field-meta.xml
<CustomField>
    <fullName>Cleared_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The risk partner or compliance officer who signed off the result.</description>
    <label>Cleared by</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Conflict checks Cleared by</relationshipLabel>
    <relationshipName>Conflict_Check_Cleared_by</relationshipName>
    <type>Lookup</type>
</CustomField>