blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Conflict_Check__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lets compliance see every check run for a client.</description>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Conflict checks</relationshipLabel>
    <relationshipName>Conflict_checks</relationshipName>
    <type>Lookup</type>
</CustomField>