blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Conflict_Check__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links each check to the opportunity it was run for.</description>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Conflict checks</relationshipLabel>
    <relationshipName>Conflict_checks</relationshipName>
    <type>Lookup</type>
</CustomField>