blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Conflict_Check__c/fields/Ethical_wall_needed__c.field-meta.xml
<CustomField>
    <fullName>Ethical_wall_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The clearance depends on keeping two teams apart. Matter team access must be restricted.</description>
    <label>Ethical wall needed</label>
    <type>Checkbox</type>
</CustomField>