blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Conflict_Check__c/fields/Parties_checked__c.field-meta.xml
<CustomField>
    <fullName>Parties_checked__c</fullName>
    <description>Names of every party searched, including the client, related companies and adverse parties. Names only, no matter detail.</description>
    <label>Parties checked</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>