blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Conflict_Check__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>Outcome of this check.</description>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Cleared with waiver</fullName>
            </value>
            <value>
                <fullName>Conflicted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>