blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Conflict_Check__c/listViews/Conflicts_awaiting_clearance.listView-meta.xml
<ListView>
    <fullName>Conflicts_awaiting_clearance</fullName>
    <columns>NAME</columns>
    <columns>Check_date__c</columns>
    <columns>Result__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Result__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Conflict checks awaiting clearance</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>